--- a/index.html
+++ b/index.html
@@ -17,6 +17,12 @@
     	  	border: 1px solid #fff;
     		margin-right: 20px;
 		}
+		div{
+			color: white;
+			font-family: arial;
+			text-align: center;
+			font-size: 15px;
+		}
   	</style>
   	<script src="main.js"></script>
 </head>
@@ -25,6 +31,10 @@
 	<audio id="music" controls hidden>
 		<source src="clar_tetris.wav" type="audio/wav">
 	</audio>
+	<div>
+		<label for="levelBar">Level: 1</label><br>
+		<progress id="levelBar" value="0" max="5"></progress>
+	</div>
 	<canvas id="tetrisCanvas" width="300" height="600"></canvas>
 	<canvas id="nextBlockCanvas" width="100" height="100"></canvas>
 </body>
