--- a/index.html
+++ b/index.html
@@ -15,14 +15,30 @@
     	}
     	canvas {
     	  	border: 1px solid #fff;
-    		margin-right: 20px;
 		}
 		div{
+			display: flex;
+			flex-direction: column;
 			color: white;
 			font-family: arial;
-			text-align: center;
+			align-items: center;
 			font-size: 15px;
 		}
+		#levelBar{
+			width: 300px;
+			margin-bottom: 20px;
+		}
+		#volumeControl{
+            position: fixed;
+            bottom: 20px;
+            right: 20px;
+            display: flex;
+            align-items: center;
+        }
+        #volumeSlider{
+            width: 100px;
+            margin-right: 10px;
+        }
   	</style>
   	<script src="main.js"></script>
 </head>
@@ -31,12 +47,16 @@
 	<audio id="music" controls hidden>
 		<source src="clar_tetris.wav" type="audio/wav">
 	</audio>
-	<div>
-		<label for="levelBar">Level: 1</label><br>
+	<div id="level" style="display: none;">
+		<label id="levelText">Level: 1</label><br>
 		<progress id="levelBar" value="0" max="5"></progress>
+		<canvas id="tetrisCanvas" width="300" height="600" style="display: none;"></canvas>
 	</div>
-	<canvas id="tetrisCanvas" width="300" height="600"></canvas>
-	<canvas id="nextBlockCanvas" width="100" height="100"></canvas>
+	<canvas id="nextBlockCanvas" width="100" height="100" style="display: none; margin-left: 20px;"></canvas>
+	<div id="volumeControl" style="display: none;">
+		<label for="volumeSlider">Volume:</label>
+        <input id="volumeSlider" type="range" min="0" max="100" step="1" value="50">
+    </div>
 </body>
 </html>
 
