--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             margin-right: 10px;
         }
   	</style>
-  	<script src="main.js"></script>
+  	<script src="main.js" type="text/javascript"></script>
 </head>
 <body>
 	<button id="play"><b>PLAY TETRIS</b></button>
