--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
     		height: 100vh;
     		margin: 0;
     		background-color: #15191d;
+			color: white;
+			font-family: arial;
+			font-size: 15px;
     	}
     	canvas {
     	  	border: 1px solid #fff;
@@ -19,10 +22,7 @@
 		div{
 			display: flex;
 			flex-direction: column;
-			color: white;
-			font-family: arial;
 			align-items: center;
-			font-size: 15px;
 		}
 		#levelBar{
 			width: 300px;
@@ -39,6 +39,30 @@
             width: 100px;
             margin-right: 10px;
         }
+		#gameOver{
+			width: 300px;
+			height: 150px;
+			border-radius: 25px;
+			position: absolute;
+			margin: auto auto;
+			background-color: #313b4b;
+		}
+		#gameOver div {
+		    width: 100%;
+		    display: flex;
+		    justify-content: space-between;
+		    margin-top: 10px;
+			flex-direction: unset;
+		}
+		#gameOver button{
+			margin: 5%;
+			width: 48%;
+		    text-align: center;
+		}
+		el{
+		    width: 48%;
+		    text-align: center;
+		}
   	</style>
   	<script src="main.js" type="text/javascript"></script>
 </head>
@@ -57,6 +81,17 @@
 		<label for="volumeSlider">Volume:</label>
         <input id="volumeSlider" type="range" min="0" max="100" step="1" value="50">
     </div>
+	<div id="gameOver" style="display: none;">
+		<b style="padding-top: 20px; font-size: 30px;">Game Over</b>
+		<div>
+			<el id="endScore">Score: 20</el>
+			<el id="endHighScore">Highscore: 10</el>
+		</div>
+		<div>
+			<button id="restart">Restart</button>
+			<button onclick="exit()">Exit</button>
+		</div>
+	</div>
 </body>
 </html>
 
