--- a/index.html
+++ b/index.html
@@ -92,6 +92,7 @@
 			<button onclick="exit()">Exit</button>
 		</div>
 	</div>
+	<i style="position: fixed; bottom: 3%;">Arrows for movement, up for rotate, CTRL hard drop</i>
 </body>
 </html>
 
