--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Tetris</title>
+	<link rel="icon" type="image/x-icon" href="favicon.ico">
 	<style>
     	body {
     		display: flex;
@@ -24,17 +25,13 @@
 			flex-direction: column;
 			align-items: center;
 		}
+		button{
+			margin: 5px;
+		}
 		#levelBar{
 			width: 300px;
 			margin-bottom: 20px;
 		}
-		#volumeControl{
-            position: fixed;
-            bottom: 20px;
-            right: 20px;
-            display: flex;
-            align-items: center;
-        }
         #volumeSlider{
             width: 100px;
             margin-right: 10px;
@@ -47,7 +44,7 @@
 			margin: auto auto;
 			background-color: #313b4b;
 		}
-		#gameOver div {
+		.rowAlign {
 		    width: 100%;
 		    display: flex;
 		    justify-content: space-between;
@@ -59,15 +56,32 @@
 			width: 48%;
 		    text-align: center;
 		}
-		el{
+		el, .rowAlign *{
 		    width: 48%;
 		    text-align: center;
+		}
+		#settings{
+			border-radius: 25px;
+			position: absolute;
+			height: 450px;
+			width: 250px;
+			background-color: #313b4b;
+		}
+		#settings *{
+			margin-top: auto;
+		}
+		#settings label{
+			text-align: left;
+			margin-left: 15px;
 		}
   	</style>
   	<script src="main.js" type="text/javascript"></script>
 </head>
 <body>
-	<button id="play"><b>PLAY TETRIS</b></button>
+	<div id="startScreen">
+		<button id="play"><b>PLAY TETRIS</b></button>
+		<button id="openSet"><b>SETTINGS</b></button>
+	</div>
 	<audio id="music" controls hidden>
 		<source src="clar_tetris.wav" type="audio/wav">
 	</audio>
@@ -77,22 +91,57 @@
 		<canvas id="tetrisCanvas" width="300" height="600" style="display: none;"></canvas>
 	</div>
 	<canvas id="nextBlockCanvas" width="100" height="100" style="display: none; margin-left: 20px;"></canvas>
-	<div id="volumeControl" style="display: none;">
-		<label for="volumeSlider">Volume:</label>
-        <input id="volumeSlider" type="range" min="0" max="100" step="1" value="50">
-    </div>
+
+	<div id="settings" style="display: none;">
+		<b style="margin-top: 5px; font-size: 30px;">SETTINGS</b>
+		<div class="rowAlign">
+			<label for="volumeSlider">Music volume:</label>
+        	<input id="volumeSlider" type="range" min="0" max="100" step="1" value="50">
+    	</div>
+		<b style="margin-top: 10px;" id="playerTag">Player 1:</b>
+		<div class="rowAlign">
+			<label>Rotate: </label>
+			<button>Up</button>
+		</div>
+		<div class="rowAlign">
+			<label>Left: </label>
+			<button>Left</button>
+		</div>
+		<div class="rowAlign">
+			<label>Right: </label>
+			<button>Right</button>
+		</div>
+		<div class="rowAlign">
+			<label>Down: </label>
+			<button>Down</button>
+		</div>
+		<div class="rowAlign">
+			<label>Soft drop: </label>
+			<button>Space</button>
+		</div>
+		<div class="rowAlign">
+			<label>Hard drop: </label>
+			<button>CTRL</button>
+		</div>
+		<div class="rowAlign" style="margin-bottom: 15px;">
+			<button><b>Switch player</b></button>
+			<button id="closeSet"><b>Save and close</b></button>
+		</div>
+	</div>
+
+	
 	<div id="gameOver" style="display: none;">
 		<b style="padding-top: 20px; font-size: 30px;">Game Over</b>
-		<div>
+		<div class="rowAlign">
 			<el id="endScore">Score: 20</el>
 			<el id="endHighScore">Highscore: 10</el>
 		</div>
-		<div>
-			<button id="restart">Restart</button>
-			<button onclick="exit()">Exit</button>
+		<div class="rowAlign">
+			<button id="restart"><b>Restart</b></button>
+			<button onclick="exit()"><b>Exit</b></button>
 		</div>
 	</div>
-	<i style="position: fixed; bottom: 3%;">Arrows for movement, up for rotate, CTRL hard drop</i>
+	<i style="position: fixed; bottom: 3%;">Arrows for movement, up for rotate, CTRL hard drop, Space soft drop, ESC to pause</i>
 </body>
 </html>
 
