--- a/testi/index.html
+++ b/testi/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Testi</title>
+    <script src="main.js" type="text/javascript"></script>
 </head>
 <body>
     <div id="fileExplor"></div>
-    <a href="3. letnik/ANG/BrezovnikH-1#.pdf">Ang Test</a>
+    <a href="https://philipmikmik.github.io/testi/3. letnik/ANG/BrezovnikH-1#.pdf" target="_blank">Ang Test</a>
 </body>
 </html>
