--- a/testi/4.letnik/PSI/index.html
+++ b/testi/4.letnik/PSI/index.html
@@ -6,7 +6,7 @@
     <title>Testi</title>
 </head>
 <body>
-    <a href="./3.letnik/index.html">3.letnik</a><br/>
-    <a href="./4.letnik/index.html">4.letnik</a><br/>
+    <a href="..">..</a><br/>
+    <a href="CoricS-1.pdf">CoricS-1.pdf</a><br/>
 </body>
 </html>
