--- a/testi/4.letnik/index.html
+++ b/testi/4.letnik/index.html
@@ -7,8 +7,8 @@
 </head>
 <body>
     <a href="..">..</a><br/>
-    <a href="./ANG/index.html">ANG</a><br/>
-    <a href="./MTE/index.html">MTE</a><br/>
-    <a href="./PSI/index.html">PSI</a><br/>
+    <a href="./ANG/">ANG</a><br/>
+    <a href="./MTE/">MTE</a><br/>
+    <a href="./PSI/">PSI</a><br/>
 </body>
 </html>
