--- a/testi/3.letnik/index.html
+++ b/testi/3.letnik/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <a href="..">..</a><br/>
-    <a href="./ANG/index.html">ANG</a><br/>
+    <a href="./ANG/">ANG</a><br/>
 </body>
 </html>
